--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,10 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.2")
 
     implementation("io.coil-kt:coil-compose:2.0.0-rc03")
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 
     implementation("io.insert-koin:koin-androidx-compose:3.1.5")
+    implementation("androidx.navigation:navigation-compose:2.4.2")
+
 }
