--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NetworkTask8">
         <activity
-            android:name=".presentation.UserActivity"
+            android:name=".presentation.BaseActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.NetworkTask8">
